add book button now adds books to page

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <title>Document</title>
 </head>
 <body>
-    <div class="header">
+    <div id="header">
         <h1>My Library</h1>
     </div>
     <div id="main">
@@ -24,6 +24,8 @@
                 </label>
                 <button type="submit">Submit</button>
             </form>
+        </div>
+        <div id="book-grid-container" >
         </div>
     </div>
 
