--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
             <div id="book-form-container">
                 <h2>Add a New Book</h2>
                 <form id="add-book-form" method="dialog">
-                    <input type="text" id="book-title" placeholder="Title" required autofocus>
+                    <input type="text" id="book-title" placeholder="Title" required >
                     <input type="text" id="book-author" placeholder="Author" required>
                     <input type="number" id="book-pages" placeholder="Pages" requried>
                     <label id="book-read-label" for="book-read" required>
